# Hazy

./: .gitattributes  .gitignore  README.md  cabal.project  hazy.cabal
compiler/: Builtin.hs  Error.hs  Error.hs-boot  Main.hs  Order.hs  Package.hs  Unique.hs  Verbose.hs
compiler/Builtin/: Applicative.hs  Applicative.hs-boot  Bool.hs  Bool.hs-boot  Enum.hs  Enum.hs-boot  Eq.hs  Eq.hs-boot  Fractional.hs  Fractional.hs-boot  Functor.hs  Functor.hs-boot  Integral.hs  Integral.hs-boot  List.hs  List.hs-boot  Monad.hs  Monad.hs-boot  MonadFail.hs  MonadFail.hs-boot  Num.hs  Num.hs-boot  Ord.hs  Ord.hs-boot  Ordering.hs  Ordering.hs-boot  Ratio.hs  Ratio.hs-boot  Real.hs  Real.hs-boot  Tuple.hs
compiler/Core/: Builtin.hs  Builtin.hs-boot  Shift.hs  Substitute.hs
compiler/Core/Index/: Term.hs
compiler/Core/Temporary/: Definition.hs  Definition.hs-boot  Function.hs  Pattern.hs  RightHandSide.hs
compiler/Core/Tree/: Builtin.hs  Builtin.hs-boot  Class.hs  Class.hs-boot  ClassExtra.hs  ClassExtra.hs-boot  Constraint.hs  Constraint.hs-boot  Constraints.hs  Constructor.hs  ConstructorInfo.hs  Data.hs  Data.hs-boot  Declaration.hs  Declaration.hs-boot  Declarations.hs  Declarations.hs-boot  Entry.hs  EntryInfo.hs  Evidence.hs  Evidence.hs-boot  Expression.hs  Expression.hs-boot  Hook.hs  Instance.hs  Instanciation.hs  Instanciation.hs-boot  MethodConcrete.hs  MethodInfo.hs  Module.hs  Scheme.hs  Scheme.hs-boot  SchemeOver.hs  Statements.hs  Statements.hs-boot  Type.hs  Type.hs-boot  TypeDeclaration.hs  TypeDeclaration.hs-boot  TypeDeclarationExtra.hs  (+2 more)
compiler/Data/: Acyclic.hs  Heptafoldable.hs  Hexatraversable.hs  Octatraversable.hs  Pentafoldable.hs  Quadrifoldable.hs  Quadritraversable.hs  README.md  Trifoldable.hs  Tritraversable.hs
compiler/Data/Acyclic/: Axiom.hs
compiler/Data/IO/: Lazy.hs
compiler/Data/Strict/: Maybe.hs
compiler/Generate/: Context.hs  Global.hs  GlobalType.hs  Info.hs  LocalType.hs  Mangle.hs  Precontext.hs  Target.hs  Variable.hs
compiler/Generate/Binding/: Evidence.hs  Term.hs  Type.hs
compiler/Generate/Go/: Declarations.hs  Declarations.hs-boot  Evidence.hs  Expression.hs  Expression.hs-boot  Hook.hs  Instance.hs  Module.hs  Statements.hs
compiler/Generate/Mangle/: Builtin.hs
compiler/Graph/: StronglyConnected.hs  Topological.hs  Topological1.hs  Topological2.hs  Topological3.hs  Topological4.hs  Topological5.hs  Topological6.hs  Topological7.hs  Topological8.hs
compiler/Javascript/: Keywords.hs  Printer.hs
compiler/Javascript/Printer/: Lexer.hs
compiler/Javascript/Tree/: Expression.hs  Expression.hs-boot  Field.hs  Module.hs  Statement.hs  Statement.hs-boot
compiler/Semantic/: Connect.hs  FreeVariables.hs  Layout.hs  Locality.hs  Scope.hs  Shift.hs  Shift.hs-boot  Stage.hs  Unify.hs  Unify.hs-boot
compiler/Semantic/Check/: ClassInstance.hs  ConstructorInstance.hs  Context.hs  Context.hs-boot  DataInstance.hs  EntryInstance.hs  InstanceAnnotation.hs  InstanceAnnotation.hs-boot  KindAnnotation.hs  KindAnnotation.hs-boot  LocalBinding.hs  Mask.hs  TermBinding.hs  TermBinding.hs-boot  TypeAnnotation.hs  TypeAnnotation.hs-boot  TypeBinding.hs  TypeBinding.hs-boot
compiler/Semantic/Index/: Constructor.hs  Constructor.hs-boot  Evidence.hs  Evidence0.hs  Local.hs  Method.hs  Selector.hs  Term.hs  Term.hs-boot  Term0.hs  Term0.hs-boot  Term2.hs  Type.hs  Type.hs-boot  Type0.hs  Type0.hs-boot  Type2.hs  Type2.hs-boot  Type3.hs
compiler/Semantic/Label/: Context.hs
compiler/Semantic/Resolve/: Bindings.hs  Builtin.hs  Canonical.hs  Context.hs  Context.hs-boot  Core.hs  Import.hs  Stability.hs
compiler/Semantic/Tree/: Alternative.hs  Body.hs  CallHead.hs  Constraint.hs  Constraints.hs  Constructor.hs  Declaration.hs  Declaration.hs-boot  Declarations.hs  Declarations.hs-boot  Definition.hs  Definition2.hs  Definition2.hs-boot  Definition3.hs  Definition3.hs-boot  Definition4.hs  Entry.hs  Expression.hs  Expression.hs-boot  ExpressionField.hs  Field.hs  Function.hs  GADTConstructor.hs  Instance.hs  Instance.hs-boot  Lambda.hs  Method.hs  MethodAbstract.hs  MethodConcrete.hs  Module.hs  Module.hs-boot  Pattern.hs  Pattern.hs-boot  PatternField.hs  RightHandSide.hs  Scheme.hs  Scheme.hs-boot  Select.hs  Selector.hs  Statements.hs  (+13 more)
compiler/Semantic/Unify/: Builtin.hs  Class.hs  Class.hs-boot  Constraint.hs  Constraint.hs-boot  Constraints.hs  Constraints.hs-boot  Error.hs  Error.hs-boot  Evidence.hs  Evidence.hs-boot  Instanciation.hs  Instanciation.hs-boot  SchemeOver.hs  SchemeOver.hs-boot  Type.hs  Type.hs-boot
compiler/Stage1/: Extensions.hs  FreeTypeVariables.hs  FreeVariables.hs  Lexer.hs  Parser.hs  ParserCombinator.hs  ParserCombinator.hs-boot  Position.hs  Printer.hs  TermBindingVariables.hs  Variable.hs
compiler/Stage2/: Connect.hs  FreeVariables.hs  Layout.hs  Locality.hs  Scope.hs  Shift.hs  Shift.hs-boot  Stage.hs  Unify.hs  Unify.hs-boot
compiler/Stage3/: Synonym.hs  Unify.hs  Unify.hs-boot
compiler/Stage4/: Shift.hs  Substitute.hs
compiler/Syntax/: Extensions.hs  FreeVariables.hs  Lexer.hs  Parser.hs  ParserCombinator.hs  ParserCombinator.hs-boot  Position.hs  Printer.hs  StringLiteral.hs  Variable.hs
hooks/: pre-commit
runtime/: Hazy.mjs  flags  index.mjs  package
runtime/Hazy/: Runtime.mjs
runtime/header/: Hazy.hs
runtime/javascript/: Hazy.mjs
test/good/: Case.hs  Cyclical.hs  Default.hs  Disjoint.hs  Generalization.hs  Guard.hs  Hello.hs  Indent.hs  Instance.hs  Integers.hs  Lambda.hs  Levity.hs  LocalData.hs  LocalImport.hs  Mismatch.hs  Negate.hs  NestedClassShare.hs  Promotion.hs  Reader.hs  Record.hs  RecursiveType.hs  Sloppy.hs  Sort.hs  SuperEq.hs  Synonym.hs  Tuple.hs  TypeAnnotation.hs  Unstable.hs  WeirdClass.hs  ZeroField.hs
tools/: Test.hs  build.sh  test.sh
utility/Data/: Acyclic.hs  Acyclic1.hs  Acyclic2.hs  Acyclic3.hs  Acyclic4.hs  Acyclic5.hs  Acyclic6.hs  Acyclic7.hs  Acyclic8.hs  Heptafunctor.hs  Heptatraversable.hs  Hexafoldable.hs  Hexafunctor.hs  Octafoldable.hs  Octafunctor.hs  Pentafunctor.hs  Pentatraversable.hs  Quadrifunctor.hs  Trifunctor.hs
(+1089 files in other folders)
