cabal-version: 2.4
name: hazy
version: 0.1.0.0
synopsis: The Hazy Haskell Compiler
description:
homepage:
license: GPL-3.0-only
license-file: LICENSE
author: Freddy Angel Cubas "superstar64"
maintainer: Hexagonalstar64@gmail.com
copyright: Copyright © 2026 Freddy Angel Cubas "superstar64"
category: Development

executable hazy
  main-is: Main.hs
  other-modules:
    Data.Acyclic
    Data.Acyclic.Axiom
    Data.Heptafoldable
    Data.Heptafunctor
    Data.Heptatraversable
    Data.Hexafoldable
    Data.Hexafunctor
    Data.Hexatraversable
    Data.IO.Lazy
    Data.List.Reverse
    Data.Pentafoldable
    Data.Pentafunctor
    Data.Pentatraversable
    Data.Quadrifoldable
    Data.Quadrifunctor
    Data.Quadritraversable
    Data.Strict.Maybe
    Data.Strict.Vector1
    Data.Strict.Vector2
    Data.Trifoldable
    Data.Trifunctor
    Data.Tritraversable
    Error
    Javascript.Keywords
    Javascript.Printer
    Javascript.Printer.Lexer
    Javascript.Printer.Tree.AdditiveExpression
    Javascript.Printer.Tree.ArgumentList
    Javascript.Printer.Tree.Arguments
    Javascript.Printer.Tree.ArrowFunction
    Javascript.Printer.Tree.ArrowParameters
    Javascript.Printer.Tree.AssignmentExpression
    Javascript.Printer.Tree.BindingElement
    Javascript.Printer.Tree.BindingList
    Javascript.Printer.Tree.BitwiseANDExpression
    Javascript.Printer.Tree.BitwiseORExpression
    Javascript.Printer.Tree.BitwiseXORExpression
    Javascript.Printer.Tree.Block
    Javascript.Printer.Tree.BreakStatement
    Javascript.Printer.Tree.CallExpression
    Javascript.Printer.Tree.ClassElementName
    Javascript.Printer.Tree.ConciseBody
    Javascript.Printer.Tree.ConditionalExpression
    Javascript.Printer.Tree.Declaration
    Javascript.Printer.Tree.EqualityExpression
    Javascript.Printer.Tree.ExponentiationExpression
    Javascript.Printer.Tree.ExportDeclaration
    Javascript.Printer.Tree.ExportSpecifier
    Javascript.Printer.Tree.ExportsList
    Javascript.Printer.Tree.Expression
    Javascript.Printer.Tree.FormalParameterList
    Javascript.Printer.Tree.FormalParameters
    Javascript.Printer.Tree.FromClause
    Javascript.Printer.Tree.IfStatement
    Javascript.Printer.Tree.ImportClause
    Javascript.Printer.Tree.ImportDeclaration
    Javascript.Printer.Tree.ImportSpecifier
    Javascript.Printer.Tree.ImportsList
    Javascript.Printer.Tree.Initializer
    Javascript.Printer.Tree.LabelledItem
    Javascript.Printer.Tree.LabelledStatement
    Javascript.Printer.Tree.LeftHandSideExpression
    Javascript.Printer.Tree.LetOrConst
    Javascript.Printer.Tree.LexicalBinding
    Javascript.Printer.Tree.LexicalDeclaration
    Javascript.Printer.Tree.Literal
    Javascript.Printer.Tree.LiteralPropertyName
    Javascript.Printer.Tree.LogicalANDExpression
    Javascript.Printer.Tree.LogicalORExpression
    Javascript.Printer.Tree.MemberExpression
    Javascript.Printer.Tree.MethodDefinition
    Javascript.Printer.Tree.ModuleExportName
    Javascript.Printer.Tree.ModuleItem
    Javascript.Printer.Tree.MultiplicativeExpression
    Javascript.Printer.Tree.NamedExports
    Javascript.Printer.Tree.NamedImports
    Javascript.Printer.Tree.NewExpression
    Javascript.Printer.Tree.ObjectLiteral
    Javascript.Printer.Tree.PrimaryExpression
    Javascript.Printer.Tree.PropertyDefinition
    Javascript.Printer.Tree.PropertyDefinitionList
    Javascript.Printer.Tree.PropertyName
    Javascript.Printer.Tree.RelationExpression
    Javascript.Printer.Tree.ReturnStatement
    Javascript.Printer.Tree.ShiftExpression
    Javascript.Printer.Tree.ShortCircuitExpression
    Javascript.Printer.Tree.SingleNameBinding
    Javascript.Printer.Tree.Statement
    Javascript.Printer.Tree.StatementListItem
    Javascript.Printer.Tree.UnaryExpression
    Javascript.Printer.Tree.UpdateExpression
    Javascript.Printer.Tree.WithClause
    Javascript.Tree.Expression
    Javascript.Tree.Field
    Javascript.Tree.Module
    Javascript.Tree.Statement
    Order
    Stage1.Extensions
    Stage1.FreeTypeVariables
    Stage1.Lexer
    Stage1.Parser
    Stage1.ParserCombinator
    Stage1.Position
    Stage1.Printer
    Stage1.TermBindingVariables
    Stage1.Tree.Alias
    Stage1.Tree.Alternative
    Stage1.Tree.Associativity
    Stage1.Tree.Body
    Stage1.Tree.Brand
    Stage1.Tree.ClassDeclaration
    Stage1.Tree.ClassDeclarations
    Stage1.Tree.Constraint
    Stage1.Tree.Constructor
    Stage1.Tree.Data
    Stage1.Tree.Declaration
    Stage1.Tree.Declarations
    Stage1.Tree.Entry
    Stage1.Tree.ExportSymbol
    Stage1.Tree.Exports
    Stage1.Tree.Expression
    Stage1.Tree.ExpressionField
    Stage1.Tree.ExpressionInfix
    Stage1.Tree.Field
    Stage1.Tree.Fixity
    Stage1.Tree.GADTConstructor
    Stage1.Tree.Import
    Stage1.Tree.ImportFields
    Stage1.Tree.ImportSymbol
    Stage1.Tree.ImportSymbols
    Stage1.Tree.InstanceDeclaration
    Stage1.Tree.InstanceDeclarations
    Stage1.Tree.InstanceHead
    Stage1.Tree.LeftHandSide
    Stage1.Tree.Marked
    Stage1.Tree.Module
    Stage1.Tree.Pattern
    Stage1.Tree.PatternField
    Stage1.Tree.PatternInfix
    Stage1.Tree.Qualification
    Stage1.Tree.RightHandSide
    Stage1.Tree.Scheme
    Stage1.Tree.Statement
    Stage1.Tree.Statements
    Stage1.Tree.Type
    Stage1.Tree.TypeInfix
    Stage1.Tree.TypePattern
    Stage1.Variable
    Stage2.Index.Constructor
    Stage2.Index.Local
    Stage2.Index.Method
    Stage2.Index.Selector
    Stage2.Index.Table.Local
    Stage2.Index.Table.Term
    Stage2.Index.Table.Type
    Stage2.Index.Term
    Stage2.Index.Term0
    Stage2.Index.Term2
    Stage2.Index.Type
    Stage2.Index.Type2
    Stage2.Index.Type3
    Stage2.Label.Binding.Local
    Stage2.Label.Binding.Term
    Stage2.Label.Binding.Type
    Stage2.Label.Context
    Stage2.Resolve.Binding.Constructor
    Stage2.Resolve.Binding.Term
    Stage2.Resolve.Binding.Type
    Stage2.Resolve.Bindings
    Stage2.Resolve.Builtin
    Stage2.Resolve.Canonical
    Stage2.Resolve.Context
    Stage2.Resolve.Core
    Stage2.Resolve.Detail.Binding.Constructor
    Stage2.Resolve.Detail.Binding.Term
    Stage2.Resolve.Detail.Binding.Type
    Stage2.Resolve.Functor.Binding.Constructor
    Stage2.Resolve.Functor.Binding.Term
    Stage2.Resolve.Functor.Binding.Type
    Stage2.Resolve.Functor.Bindings
    Stage2.Resolve.Functor.Canonical
    Stage2.Resolve.Functor.Core
    Stage2.Resolve.Functor.Same
    Stage2.Resolve.Import
    Stage2.Resolve.Stability
    Stage2.Scope
    Stage2.Shift
    Stage2.Temporary.Complete.ClassInstance
    Stage2.Temporary.Complete.Constructor
    Stage2.Temporary.Complete.ConstructorDeclaration
    Stage2.Temporary.Complete.DataInstance
    Stage2.Temporary.Complete.Declarations
    Stage2.Temporary.Complete.Field
    Stage2.Temporary.Complete.GADTConstructor
    Stage2.Temporary.Complete.Method
    Stage2.Temporary.Complete.Module
    Stage2.Temporary.Complete.Selector
    Stage2.Temporary.Complete.Shared
    Stage2.Temporary.Complete.TermDeclaration
    Stage2.Temporary.Complete.TypeDeclaration
    Stage2.Temporary.ExpressionInfix
    Stage2.Temporary.Infix
    Stage2.Temporary.Partial.ConstructorDeclaration
    Stage2.Temporary.Partial.Definition
    Stage2.Temporary.Partial.Method
    Stage2.Temporary.Partial.More.ADT
    Stage2.Temporary.Partial.More.Class
    Stage2.Temporary.Partial.More.Constructor
    Stage2.Temporary.Partial.More.Function
    Stage2.Temporary.Partial.More.GADT
    Stage2.Temporary.Partial.More.Method
    Stage2.Temporary.Partial.More.Selector
    Stage2.Temporary.Partial.More.Share
    Stage2.Temporary.Partial.More.Synonym
    Stage2.Temporary.Partial.TermDeclaration
    Stage2.Temporary.Partial.TypeDeclaration
    Stage2.Temporary.PatternInfix
    Stage2.Temporary.TypeInfix
    Stage2.Tree.Alternative
    Stage2.Tree.Body
    Stage2.Tree.Constraint
    Stage2.Tree.Constructor
    Stage2.Tree.Declarations
    Stage2.Tree.Definition
    Stage2.Tree.Entry
    Stage2.Tree.Expression
    Stage2.Tree.ExpressionField
    Stage2.Tree.Field
    Stage2.Tree.Function
    Stage2.Tree.GADTConstructor
    Stage2.Tree.Instance
    Stage2.Tree.Lambda
    Stage2.Tree.Method
    Stage2.Tree.Module
    Stage2.Tree.Pattern
    Stage2.Tree.PatternField
    Stage2.Tree.RightHandSide
    Stage2.Tree.Scheme
    Stage2.Tree.Select
    Stage2.Tree.Selector
    Stage2.Tree.Shared
    Stage2.Tree.Statements
    Stage2.Tree.TermDeclaration
    Stage2.Tree.Type
    Stage2.Tree.TypeDeclaration
    Stage2.Tree.TypePattern
    Stage3.Check.ClassInstance
    Stage3.Check.ConstructorInstance
    Stage3.Check.Context
    Stage3.Check.DataInstance
    Stage3.Check.InstanceAnnotation
    Stage3.Check.KindAnnotation
    Stage3.Check.LocalBinding
    Stage3.Check.TermBinding
    Stage3.Check.TypeAnnotation
    Stage3.Check.TypeBinding
    Stage3.Functor.Annotated
    Stage3.Functor.Declarations
    Stage3.Functor.Instance.Key
    Stage3.Functor.Module
    Stage3.Functor.ModuleSet
    Stage3.Index.Evidence
    Stage3.Index.Evidence0
    Stage3.Index.Table.Evidence0
    Stage3.Simple.Class
    Stage3.Simple.Constraint
    Stage3.Simple.Constructor
    Stage3.Simple.Data
    Stage3.Simple.Evidence
    Stage3.Simple.Scheme
    Stage3.Simple.SchemeOver
    Stage3.Simple.Type
    Stage3.Synonym
    Stage3.Temporary.Alternative
    Stage3.Temporary.Body
    Stage3.Temporary.Constraint
    Stage3.Temporary.Constructor
    Stage3.Temporary.Declarations
    Stage3.Temporary.Definition
    Stage3.Temporary.Entry
    Stage3.Temporary.Expression
    Stage3.Temporary.ExpressionField
    Stage3.Temporary.Field
    Stage3.Temporary.Function
    Stage3.Temporary.Lambda
    Stage3.Temporary.Method
    Stage3.Temporary.Pattern
    Stage3.Temporary.PatternField
    Stage3.Temporary.RightHandSide
    Stage3.Temporary.Scheme
    Stage3.Temporary.Select
    Stage3.Temporary.Statements
    Stage3.Temporary.TermDeclaration
    Stage3.Temporary.Type
    Stage3.Temporary.TypePattern
    Stage3.Tree.Alternative
    Stage3.Tree.Body
    Stage3.Tree.Constraint
    Stage3.Tree.Constructor
    Stage3.Tree.Declarations
    Stage3.Tree.Definition
    Stage3.Tree.Entry
    Stage3.Tree.Expression
    Stage3.Tree.ExpressionField
    Stage3.Tree.Field
    Stage3.Tree.Function
    Stage3.Tree.Instance
    Stage3.Tree.InstanceMethod
    Stage3.Tree.Lambda
    Stage3.Tree.Method
    Stage3.Tree.Module
    Stage3.Tree.Pattern
    Stage3.Tree.PatternField
    Stage3.Tree.RightHandSide
    Stage3.Tree.Scheme
    Stage3.Tree.Statements
    Stage3.Tree.TermDeclaration
    Stage3.Tree.Type
    Stage3.Tree.TypeDeclaration
    Stage3.Tree.TypeDeclarationExtra
    Stage3.Tree.TypePattern
    Stage3.Unify
    Stage3.Unify.Evidence
    Stage4.Index.Table.Term
    Stage4.Index.Term
    Stage4.Shift
    Stage4.Substitute
    Stage4.Temporary.Definition
    Stage4.Temporary.Function
    Stage4.Temporary.Pattern
    Stage4.Temporary.RightHandSide
    Stage4.Tree.Builtin
    Stage4.Tree.Class
    Stage4.Tree.ClassExtra
    Stage4.Tree.Constraint
    Stage4.Tree.Constructor
    Stage4.Tree.Data
    Stage4.Tree.Declarations
    Stage4.Tree.Evidence
    Stage4.Tree.Expression
    Stage4.Tree.Instance
    Stage4.Tree.InstanceMethod
    Stage4.Tree.Instanciation
    Stage4.Tree.Module
    Stage4.Tree.Scheme
    Stage4.Tree.SchemeOver
    Stage4.Tree.Statements
    Stage4.Tree.TermDeclaration
    Stage4.Tree.Type
    Stage4.Tree.TypeDeclaration
    Stage4.Tree.TypeDeclarationExtra
    Stage5.Generate.Binding.Evidence
    Stage5.Generate.Binding.Term
    Stage5.Generate.Binding.Type
    Stage5.Generate.Context
    Stage5.Generate.Global
    Stage5.Generate.GlobalType
    Stage5.Generate.LocalType
    Stage5.Generate.Mangle
    Stage5.Generate.Precontext
    Stage5.Tree.Declarations
    Stage5.Tree.Evidence
    Stage5.Tree.Expression
    Stage5.Tree.Instance
    Stage5.Tree.Module
    Stage5.Tree.Statements
    Verbose

  build-depends:
    base >=4.21.0 && <4.22,
    containers >=0.7 && <0.8,
    directory >=1.3.9 && <1.4,
    filepath >=1.5.4 && <1.6,
    parser-combinators >=1.3.0 && <1.4,
    text >=2.1.2 && <2.2,
    vector >=0.13.2 && <0.14,

  default-extensions:
    DataKinds
    DisambiguateRecordFields
    GADTs
    LambdaCase
    MonoLocalBinds
    MultiWayIf
    NamedFieldPuns
    NegativeLiterals
    PolymorphicComponents
    PostfixOperators
    ScopedTypeVariables
    StandaloneKindSignatures
    TypeOperators

  hs-source-dirs: compiler
  default-language: Haskell2010
  ghc-options:
    -Wno-unrecognised-pragmas
    -Wno-x-partial
    -Werror=incomplete-uni-patterns
    -Werror=unticked-promoted-constructors
    -Werror=unused-imports
    -Werror=unused-local-binds
    -Werror=unused-pattern-binds
    -Werror=unused-matches
    -Werror=incomplete-patterns

test-suite hazy-test
  type: exitcode-stdio-1.0
  main-is: Test.hs
  build-tool-depends: hazy:hazy
  build-depends:
    base,
    directory,
    filepath,
    process,

  hs-source-dirs: tools
  default-language: Haskell2010
