cabal-version: 2.4
name: hazy
version: 0.1.0.0
synopsis: The Hazy Haskell Compiler
description:
homepage:
license: GPL-3.0-only
license-file: LICENSE
author: Freddy Angel Cubas "superstar64"
maintainer: Hexagonalstar64@gmail.com
copyright: Copyright © 2026 Freddy Angel Cubas "superstar64"
category: Development

executable hazy
  main-is: Main.hs
  other-modules:
    Data.Heptafoldable
    Data.Heptafunctor
    Data.Heptatraversable
    Data.Hexafoldable
    Data.Hexafunctor
    Data.Hexatraversable
    Data.List.Reverse
    Data.Octafoldable
    Data.Octafunctor
    Data.Octatraversable
    Data.Pentafoldable
    Data.Pentafunctor
    Data.Pentatraversable
    Data.Quadrifoldable
    Data.Quadrifunctor
    Data.Quadritraversable
    Data.Strict.Maybe
    Data.Strict.Vector1
    Data.Strict.Vector2
    Data.Trifoldable
    Data.Trifunctor
    Data.Tritraversable
    Error
    Graph.StronglyConnected
    Graph.Topological
    Graph.Topological1
    Graph.Topological2
    Graph.Topological3
    Graph.Topological4
    Graph.Topological5
    Graph.Topological6
    Graph.Topological7
    Graph.Topological8
    Javascript.Keywords
    Javascript.Printer
    Javascript.Printer.Lexer
    Javascript.Printer.Tree.AdditiveExpression
    Javascript.Printer.Tree.ArgumentList
    Javascript.Printer.Tree.Arguments
    Javascript.Printer.Tree.ArrayLiteral
    Javascript.Printer.Tree.ArrowFunction
    Javascript.Printer.Tree.ArrowParameters
    Javascript.Printer.Tree.AssignmentExpression
    Javascript.Printer.Tree.BindingElement
    Javascript.Printer.Tree.BindingList
    Javascript.Printer.Tree.BitwiseANDExpression
    Javascript.Printer.Tree.BitwiseORExpression
    Javascript.Printer.Tree.BitwiseXORExpression
    Javascript.Printer.Tree.Block
    Javascript.Printer.Tree.BreakStatement
    Javascript.Printer.Tree.CallExpression
    Javascript.Printer.Tree.ClassElementName
    Javascript.Printer.Tree.ConciseBody
    Javascript.Printer.Tree.ConditionalExpression
    Javascript.Printer.Tree.Declaration
    Javascript.Printer.Tree.ElementList
    Javascript.Printer.Tree.Elision
    Javascript.Printer.Tree.EqualityExpression
    Javascript.Printer.Tree.ExponentiationExpression
    Javascript.Printer.Tree.ExportDeclaration
    Javascript.Printer.Tree.ExportSpecifier
    Javascript.Printer.Tree.ExportsList
    Javascript.Printer.Tree.Expression
    Javascript.Printer.Tree.FormalParameterList
    Javascript.Printer.Tree.FormalParameters
    Javascript.Printer.Tree.FromClause
    Javascript.Printer.Tree.IfStatement
    Javascript.Printer.Tree.ImportClause
    Javascript.Printer.Tree.ImportDeclaration
    Javascript.Printer.Tree.ImportSpecifier
    Javascript.Printer.Tree.ImportsList
    Javascript.Printer.Tree.Initializer
    Javascript.Printer.Tree.LabelledItem
    Javascript.Printer.Tree.LabelledStatement
    Javascript.Printer.Tree.LeftHandSideExpression
    Javascript.Printer.Tree.LetOrConst
    Javascript.Printer.Tree.LexicalBinding
    Javascript.Printer.Tree.LexicalDeclaration
    Javascript.Printer.Tree.Literal
    Javascript.Printer.Tree.LiteralPropertyName
    Javascript.Printer.Tree.LogicalANDExpression
    Javascript.Printer.Tree.LogicalORExpression
    Javascript.Printer.Tree.MemberExpression
    Javascript.Printer.Tree.MethodDefinition
    Javascript.Printer.Tree.ModuleExportName
    Javascript.Printer.Tree.ModuleItem
    Javascript.Printer.Tree.MultiplicativeExpression
    Javascript.Printer.Tree.NamedExports
    Javascript.Printer.Tree.NamedImports
    Javascript.Printer.Tree.NewExpression
    Javascript.Printer.Tree.ObjectLiteral
    Javascript.Printer.Tree.PrimaryExpression
    Javascript.Printer.Tree.PropertyDefinition
    Javascript.Printer.Tree.PropertyDefinitionList
    Javascript.Printer.Tree.PropertyName
    Javascript.Printer.Tree.RelationExpression
    Javascript.Printer.Tree.ReturnStatement
    Javascript.Printer.Tree.ShiftExpression
    Javascript.Printer.Tree.ShortCircuitExpression
    Javascript.Printer.Tree.SingleNameBinding
    Javascript.Printer.Tree.Statement
    Javascript.Printer.Tree.StatementListItem
    Javascript.Printer.Tree.UnaryExpression
    Javascript.Printer.Tree.UpdateExpression
    Javascript.Printer.Tree.WithClause
    Javascript.Tree.Expression
    Javascript.Tree.Field
    Javascript.Tree.Module
    Javascript.Tree.Statement
    Order
    Package
    Stage1.Extensions
    Stage1.FreeVariables
    Stage1.Lexer
    Stage1.Parser
    Stage1.ParserCombinator
    Stage1.Position
    Stage1.Printer
    Stage1.Tree.Alias
    Stage1.Tree.Alternative
    Stage1.Tree.Associativity
    Stage1.Tree.Body
    Stage1.Tree.Brand
    Stage1.Tree.ClassDeclaration
    Stage1.Tree.ClassDeclarations
    Stage1.Tree.Constraint
    Stage1.Tree.Constructor
    Stage1.Tree.Data
    Stage1.Tree.Declaration
    Stage1.Tree.Declarations
    Stage1.Tree.Entry
    Stage1.Tree.ExportSymbol
    Stage1.Tree.Exports
    Stage1.Tree.Expression
    Stage1.Tree.ExpressionField
    Stage1.Tree.ExpressionInfix
    Stage1.Tree.Field
    Stage1.Tree.Fixity
    Stage1.Tree.GADTConstructor
    Stage1.Tree.Import
    Stage1.Tree.ImportFields
    Stage1.Tree.ImportSymbol
    Stage1.Tree.ImportSymbols
    Stage1.Tree.InstanceDeclaration
    Stage1.Tree.InstanceDeclarations
    Stage1.Tree.InstanceHead
    Stage1.Tree.LeftHandSide
    Stage1.Tree.Marked
    Stage1.Tree.Module
    Stage1.Tree.Pattern
    Stage1.Tree.PatternField
    Stage1.Tree.PatternInfix
    Stage1.Tree.Qualification
    Stage1.Tree.RightHandSide
    Stage1.Tree.Scheme
    Stage1.Tree.Statement
    Stage1.Tree.Statements
    Stage1.Tree.Type
    Stage1.Tree.TypeInfix
    Stage1.Tree.TypePattern
    Stage1.Variable
    Stage2.Check.ClassInstance
    Stage2.Check.ConstructorInstance
    Stage2.Check.Context
    Stage2.Check.DataInstance
    Stage2.Check.EntryInstance
    Stage2.Check.Functor.Annotated
    Stage2.Check.Functor.Declarations
    Stage2.Check.Functor.Instance.Key
    Stage2.Check.Functor.Module
    Stage2.Check.Functor.ModuleSet
    Stage2.Check.Go.Declarations
    Stage2.Check.Go.Module
    Stage2.Check.Go.Scheme
    Stage2.Check.Go.TypeDeclaration
    Stage2.Check.InstanceAnnotation
    Stage2.Check.KindAnnotation
    Stage2.Check.LocalBinding
    Stage2.Check.Mask
    Stage2.Check.Simple.Class
    Stage2.Check.Simple.Constraint
    Stage2.Check.Simple.Constructor
    Stage2.Check.Simple.ConstructorInfo
    Stage2.Check.Simple.Data
    Stage2.Check.Simple.EntryInfo
    Stage2.Check.Simple.Evidence
    Stage2.Check.Simple.Instanciation
    Stage2.Check.Simple.MethodInfo
    Stage2.Check.Simple.Scheme
    Stage2.Check.Simple.SchemeOver
    Stage2.Check.Simple.SelectorInfo
    Stage2.Check.Simple.Type
    Stage2.Check.Temporary.Alternative
    Stage2.Check.Temporary.Body
    Stage2.Check.Temporary.CallHead
    Stage2.Check.Temporary.Constraint
    Stage2.Check.Temporary.Constructor
    Stage2.Check.Temporary.ConstructorInfo
    Stage2.Check.Temporary.Declaration
    Stage2.Check.Temporary.Declarations
    Stage2.Check.Temporary.Definition
    Stage2.Check.Temporary.Definition2
    Stage2.Check.Temporary.Definition3
    Stage2.Check.Temporary.Definition4
    Stage2.Check.Temporary.Do
    Stage2.Check.Temporary.Entry
    Stage2.Check.Temporary.EntryInfo
    Stage2.Check.Temporary.Expression
    Stage2.Check.Temporary.ExpressionField
    Stage2.Check.Temporary.Field
    Stage2.Check.Temporary.Function
    Stage2.Check.Temporary.Instance
    Stage2.Check.Temporary.Lambda
    Stage2.Check.Temporary.Method
    Stage2.Check.Temporary.MethodAbstract
    Stage2.Check.Temporary.MethodConcrete
    Stage2.Check.Temporary.Pattern
    Stage2.Check.Temporary.PatternField
    Stage2.Check.Temporary.RightHandSide
    Stage2.Check.Temporary.Scheme
    Stage2.Check.Temporary.Select
    Stage2.Check.Temporary.SelectorInfo
    Stage2.Check.Temporary.Statements
    Stage2.Check.Temporary.StrictnessAnnotation
    Stage2.Check.Temporary.Type
    Stage2.Check.Temporary.TypeDeclarationExtra
    Stage2.Check.Temporary.TypeDefinition
    Stage2.Check.Temporary.TypeDefinition2
    Stage2.Check.Temporary.TypePattern
    Stage2.Check.TermBinding
    Stage2.Check.TypeAnnotation
    Stage2.Check.TypeBinding
    Stage2.Connect
    Stage2.FreeVariables
    Stage2.Group.Functor.Term.Declarations
    Stage2.Group.Functor.Term.ModuleSet
    Stage2.Group.Functor.Type.Declarations
    Stage2.Group.Functor.Type.ModuleSet
    Stage2.Index.Constructor
    Stage2.Index.Evidence
    Stage2.Index.Evidence0
    Stage2.Index.Link.Term
    Stage2.Index.Link.Type
    Stage2.Index.Local
    Stage2.Index.Method
    Stage2.Index.Selector
    Stage2.Index.Table.Evidence0
    Stage2.Index.Table.Local
    Stage2.Index.Table.Term
    Stage2.Index.Table.Type
    Stage2.Index.Term
    Stage2.Index.Term0
    Stage2.Index.Term2
    Stage2.Index.Type
    Stage2.Index.Type0
    Stage2.Index.Type2
    Stage2.Index.Type3
    Stage2.Label.Binding.Local
    Stage2.Label.Binding.Term
    Stage2.Label.Binding.Type
    Stage2.Label.Context
    Stage2.Layout
    Stage2.Locality
    Stage2.Resolve.Binding.Constructor
    Stage2.Resolve.Binding.Term
    Stage2.Resolve.Binding.Type
    Stage2.Resolve.Bindings
    Stage2.Resolve.Builtin
    Stage2.Resolve.Builtin.Applicative
    Stage2.Resolve.Builtin.Bool
    Stage2.Resolve.Builtin.Enum
    Stage2.Resolve.Builtin.Eq
    Stage2.Resolve.Builtin.Fractional
    Stage2.Resolve.Builtin.Functor
    Stage2.Resolve.Builtin.Integral
    Stage2.Resolve.Builtin.Monad
    Stage2.Resolve.Builtin.MonadFail
    Stage2.Resolve.Builtin.Num
    Stage2.Resolve.Builtin.Ord
    Stage2.Resolve.Builtin.Ordering
    Stage2.Resolve.Builtin.Ratio
    Stage2.Resolve.Builtin.Real
    Stage2.Resolve.Canonical
    Stage2.Resolve.Context
    Stage2.Resolve.Core
    Stage2.Resolve.Detail.Binding.Constructor
    Stage2.Resolve.Detail.Binding.Term
    Stage2.Resolve.Detail.Binding.Type
    Stage2.Resolve.Functor.Binding.Constructor
    Stage2.Resolve.Functor.Binding.Term
    Stage2.Resolve.Functor.Binding.Type
    Stage2.Resolve.Functor.Bindings
    Stage2.Resolve.Functor.Canonical
    Stage2.Resolve.Functor.Core
    Stage2.Resolve.Functor.Same
    Stage2.Resolve.Go.Alternative
    Stage2.Resolve.Go.Body
    Stage2.Resolve.Go.CallHead
    Stage2.Resolve.Go.Constraint
    Stage2.Resolve.Go.Declarations
    Stage2.Resolve.Go.Entry
    Stage2.Resolve.Go.Expression
    Stage2.Resolve.Go.ExpressionField
    Stage2.Resolve.Go.Function
    Stage2.Resolve.Go.Instance
    Stage2.Resolve.Go.Lambda
    Stage2.Resolve.Go.Module
    Stage2.Resolve.Go.Pattern
    Stage2.Resolve.Go.PatternField
    Stage2.Resolve.Go.RightHandSide
    Stage2.Resolve.Go.Scheme
    Stage2.Resolve.Go.Select
    Stage2.Resolve.Go.Statements
    Stage2.Resolve.Go.Type
    Stage2.Resolve.Go.TypePattern
    Stage2.Resolve.Import
    Stage2.Resolve.Stability
    Stage2.Resolve.Temporary.Complete.ClassInstance
    Stage2.Resolve.Temporary.Complete.Constructor
    Stage2.Resolve.Temporary.Complete.ConstructorDeclaration
    Stage2.Resolve.Temporary.Complete.DataInstance
    Stage2.Resolve.Temporary.Complete.Declaration
    Stage2.Resolve.Temporary.Complete.Declarations
    Stage2.Resolve.Temporary.Complete.Definition
    Stage2.Resolve.Temporary.Complete.Field
    Stage2.Resolve.Temporary.Complete.GADTConstructor
    Stage2.Resolve.Temporary.Complete.Method
    Stage2.Resolve.Temporary.Complete.Module
    Stage2.Resolve.Temporary.Complete.Selector
    Stage2.Resolve.Temporary.Complete.TypeDeclaration
    Stage2.Resolve.Temporary.ExpressionInfix
    Stage2.Resolve.Temporary.Infix
    Stage2.Resolve.Temporary.Partial.ConstructorDeclaration
    Stage2.Resolve.Temporary.Partial.Declaration
    Stage2.Resolve.Temporary.Partial.Method
    Stage2.Resolve.Temporary.Partial.More.ADT
    Stage2.Resolve.Temporary.Partial.More.Choice
    Stage2.Resolve.Temporary.Partial.More.Class
    Stage2.Resolve.Temporary.Partial.More.Constructor
    Stage2.Resolve.Temporary.Partial.More.Function
    Stage2.Resolve.Temporary.Partial.More.GADT
    Stage2.Resolve.Temporary.Partial.More.Method
    Stage2.Resolve.Temporary.Partial.More.Selector
    Stage2.Resolve.Temporary.Partial.More.Synonym
    Stage2.Resolve.Temporary.Partial.TypeDeclaration
    Stage2.Resolve.Temporary.PatternInfix
    Stage2.Resolve.Temporary.TypeInfix
    Stage2.Scope
    Stage2.Shift
    Stage2.Stage
    Stage2.Tree.Alternative
    Stage2.Tree.Body
    Stage2.Tree.CallHead
    Stage2.Tree.Combinators.Implicit
    Stage2.Tree.Combinators.Inferred
    Stage2.Tree.Constraint
    Stage2.Tree.Constructor
    Stage2.Tree.Declaration
    Stage2.Tree.Declarations
    Stage2.Tree.Definition
    Stage2.Tree.Definition2
    Stage2.Tree.Definition3
    Stage2.Tree.Definition4
    Stage2.Tree.Entry
    Stage2.Tree.Expression
    Stage2.Tree.ExpressionField
    Stage2.Tree.Field
    Stage2.Tree.Function
    Stage2.Tree.GADTConstructor
    Stage2.Tree.Instance
    Stage2.Tree.Lambda
    Stage2.Tree.Method
    Stage2.Tree.MethodAbstract
    Stage2.Tree.MethodConcrete
    Stage2.Tree.Module
    Stage2.Tree.Pattern
    Stage2.Tree.PatternField
    Stage2.Tree.RightHandSide
    Stage2.Tree.Scheme
    Stage2.Tree.Select
    Stage2.Tree.Selector
    Stage2.Tree.Statements
    Stage2.Tree.StrictnessAnnotation
    Stage2.Tree.Type
    Stage2.Tree.TypeDeclaration
    Stage2.Tree.TypeDeclarationExtra
    Stage2.Tree.TypeDefinition
    Stage2.Tree.TypeDefinition2
    Stage2.Tree.TypePattern
    Stage2.Unify
    Stage2.Unify.Builtin
    Stage2.Unify.Class
    Stage2.Unify.Constraint
    Stage2.Unify.Error
    Stage2.Unify.Evidence
    Stage2.Unify.Instanciation
    Stage2.Unify.SchemeOver
    Stage2.Unify.Type
    Stage4.Index.Table.Term
    Stage4.Index.Term
    Stage4.Shift
    Stage4.Substitute
    Stage4.Temporary.Definition
    Stage4.Temporary.Function
    Stage4.Temporary.Pattern
    Stage4.Temporary.RightHandSide
    Stage4.Tree.Builtin
    Stage4.Tree.Builtin.Applicative
    Stage4.Tree.Builtin.Bool
    Stage4.Tree.Builtin.Enum
    Stage4.Tree.Builtin.Eq
    Stage4.Tree.Builtin.Fractional
    Stage4.Tree.Builtin.Functor
    Stage4.Tree.Builtin.Integral
    Stage4.Tree.Builtin.List
    Stage4.Tree.Builtin.Monad
    Stage4.Tree.Builtin.MonadFail
    Stage4.Tree.Builtin.Num
    Stage4.Tree.Builtin.Ord
    Stage4.Tree.Builtin.Ordering
    Stage4.Tree.Builtin.Ratio
    Stage4.Tree.Builtin.Real
    Stage4.Tree.Builtin.Tuple
    Stage4.Tree.Class
    Stage4.Tree.ClassExtra
    Stage4.Tree.Constraint
    Stage4.Tree.Constructor
    Stage4.Tree.ConstructorInfo
    Stage4.Tree.Data
    Stage4.Tree.Declaration
    Stage4.Tree.Declarations
    Stage4.Tree.Entry
    Stage4.Tree.EntryInfo
    Stage4.Tree.Evidence
    Stage4.Tree.Expression
    Stage4.Tree.Hook
    Stage4.Tree.Instance
    Stage4.Tree.Instanciation
    Stage4.Tree.MethodConcrete
    Stage4.Tree.MethodInfo
    Stage4.Tree.Module
    Stage4.Tree.Scheme
    Stage4.Tree.SchemeOver
    Stage4.Tree.Statements
    Stage4.Tree.Type
    Stage4.Tree.TypeDeclaration
    Stage4.Tree.TypeDeclarationExtra
    Stage4.Tree.TypeDefinition
    Stage5.Generate.Binding.Evidence
    Stage5.Generate.Binding.Term
    Stage5.Generate.Binding.Type
    Stage5.Generate.Context
    Stage5.Generate.Global
    Stage5.Generate.GlobalType
    Stage5.Generate.Info
    Stage5.Generate.LocalType
    Stage5.Generate.Mangle
    Stage5.Generate.Mangle.Builtin
    Stage5.Generate.Precontext
    Stage5.Generate.Variable
    Stage5.Tree.Declarations
    Stage5.Tree.Evidence
    Stage5.Tree.Expression
    Stage5.Tree.Hook
    Stage5.Tree.Instance
    Stage5.Tree.Module
    Stage5.Tree.Statements
    Verbose

  build-depends:
    base,
    containers >=0.7 && <0.8,
    directory >=1.3.9 && <1.4,
    filepath >=1.5.4 && <1.6,
    parser-combinators >=1.3.0 && <1.4,
    text >=2.1.2 && <2.2,
    vector >=0.13.2 && <0.14,

  default-extensions:
    DataKinds
    DeriveFoldable
    DeriveFunctor
    DeriveTraversable
    DisambiguateRecordFields
    GADTs
    LambdaCase
    MonoLocalBinds
    MultiWayIf
    NamedFieldPuns
    NegativeLiterals
    PolymorphicComponents
    PostfixOperators
    ScopedTypeVariables
    StandaloneKindSignatures
    TypeOperators

  hs-source-dirs:
    compiler
    utility

  default-language: Haskell2010
  ghc-options:
    -Wno-unrecognised-pragmas
    -Wno-x-partial
    -Werror=incomplete-uni-patterns
    -Werror=unticked-promoted-constructors
    -Werror=unused-imports
    -Werror=unused-local-binds
    -Werror=unused-pattern-binds
    -Werror=unused-matches
    -Werror=incomplete-patterns
    -Werror=missing-fields
    -Werror=incomplete-record-selectors
    -Werror=incomplete-record-updates

test-suite hazy-test
  type: exitcode-stdio-1.0
  main-is: Test.hs
  build-tool-depends: hazy:hazy
  build-depends:
    base,
    directory,
    filepath,
    process,

  hs-source-dirs: tools
  default-language: Haskell2010
